fix: updated badge tabslist on page

--- a/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
@@ -90,9 +90,9 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 <br />
 <br />
 
-## Examples
+### Examples
 
-### Badge with icon
+#### Badge with icon
 
 <AppProvider>
   <CodePreview
