fix: actionsheet icon path

--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -16,14 +16,8 @@ import { Meta } from '@storybook/addon-docs';
 
 import { Actionsheet, Button } from './Actionsheet';
 import { VStack, Input } from './ActionsheetAvoidKeyboard';
-import {
-  Icon,
-  DeleteIcon,
-  ShareIcon,
-  PlayIcon,
-  FavouriteIcon,
-  CloseIcon,
-} from './ActionsheetIcon';
+import { Icon, DeleteIcon, ShareIcon } from './ActionsheetIcon';
+import { PlayIcon, FavouriteIcon, CloseIcon } from './ActionsheetIcon';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
