--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -1,7 +1,7 @@
 ---
 title: gluestack-ui Actionsheet Component | Installation, Usage, and API
 
-description: An Actionsheet is a dialog that displays a set of options. It appears on top of the app's content.
+description: The ActionSheet is a UI element that displays a list of options or actions. It's commonly used in mobile apps to provide a contextual menu of actions. The component appears as a modal dialog that slides up from the bottom of the screen and can be customized with different styles and triggers.
 
 pageTitle: Actionsheet
 
@@ -370,7 +370,7 @@ It is React Native's [Pressable](https://reactnative.dev/docs/pressable#props) c
 
 #### Actionsheet.Content
 
-It is [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. You can use any declarative animation library you prefer.
+It inherits all the properties of [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. With this ActionSheet component, you have the flexibility to use any declarative animation library that suits your needs.
 
 #### Actionsheet.DragIndicatorWrapper
 
@@ -446,6 +446,8 @@ You can read more on how to animate components [here](https://ui.gluestack.io/do
 
 #### Usage
 
+Default styling of all these components can be found in the `components/core/actionsheet` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Actionsheet/index.tsx) of the styled `Actionsheet` components.
+
 ```jsx
 // import the styles
 import {
@@ -488,13 +490,9 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/core/actionsheet` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Actionsheet/index.tsx) of the styled `Actionsheet` components.
-
 ### Keyboard handling
 
 Demonstrates a common UI pattern known as keyboard handling or keyboard scrolling, in which an input field is automatically scrolled into view when the user taps on it and the keyboard appears. This improves usability and ensures that the input field is always visible and accessible, even when the keyboard is blocking part of the screen.
-
-#### Usage
 
 <CodePreview
   showComponentRenderer={true}
@@ -546,6 +544,8 @@ Demonstrates a common UI pattern known as keyboard handling or keyboard scrollin
 />
 
 ### Icons
+
+The ActionSheet with Icons is a variation of the ActionSheet component that displays icons next to each option. It's commonly used in apps for a more visual representation of options and easier navigation.
 
 <CodePreview
   showComponentRenderer={true}
@@ -618,9 +618,7 @@ Demonstrates a common UI pattern known as keyboard handling or keyboard scrollin
 
 ### VirtualizedList
 
-A pre-integrated React Native VirtualizedList
-
-#### Usage
+The ActionSheet with Virtualized List includes a virtualized list for better performance when displaying a large number of options. It's commonly used in apps with long lists of options for an improved user experience.
 
 <CodePreview
   showComponentRenderer={true}
@@ -678,9 +676,7 @@ A pre-integrated React Native VirtualizedList
 
 ### FlatList
 
-A pre-integrated React Native FlatList
-
-#### Usage
+The ActionSheet with Flat List is a variation of the ActionSheet component that displays a flat list of options. It's commonly used in apps for a simple and straightforward display of options to the user.
 
 <CodePreview
   showComponentRenderer={true}
@@ -743,9 +739,7 @@ A pre-integrated React Native FlatList
 
 ### SectionList
 
-A pre-integrated React Native SectionList
-
-#### Usage
+The ActionSheet with SectionList is a variation of the ActionSheet component that displays a sectioned list of options. It's commonly used in apps to organize options into different categories or sections for better readability and navigation.
 
 <CodePreview
   showComponentRenderer={true}
