--- a/example/storybook/src/advanced/Fonts/index.stories.mdx
+++ b/example/storybook/src/advanced/Fonts/index.stories.mdx
@@ -21,6 +21,8 @@ When you want to use a specific font in your application, you have to follow two
 
 ## Loading fonts
 
+`expo-font` allows loading fonts from the web and using them in React Native components.
+
 ### **For Expo projects**
 
 To load **expo-google-fonts** in Expo, we have to follow following steps:
