--- a/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
@@ -23,6 +23,8 @@ import Wrapper from '../../Wrapper';
 
 ## Basic
 
+Following is the default implementation of the **Badge** component without any additional customization. This serves as a starting point for users who are new to this library and want to learn about the basic functionality and appearance of the component.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
@@ -51,7 +53,7 @@ import Wrapper from '../../Wrapper';
 
 ## Installation
 
-This command copies the `Badge` component to your project.
+To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
 npx gluestack-ui add badge
@@ -59,7 +61,7 @@ npx gluestack-ui add badge
 
 ### Import
 
-You can import the `Badge` component from your components folder.
+To use the component in your project, run the command below into your import statement. This will import the component from your components folder.
 
 ```bash
 import { Badge } from './components';
@@ -67,7 +69,7 @@ import { Badge } from './components';
 
 ### Anatomy
 
-The badge component consists of the following parts:
+The structure provided below can help you identify and understand a badge component's various parts.
 
 ```jsx
 export default () => (
@@ -78,6 +80,8 @@ export default () => (
 ```
 
 ### API Reference
+
+The following section contains a comprehensive list of the component's references, including descriptions, properties, types, and default behavior. This information is readily available for you to access, helping you effectively utilize the component library in your projects.
 
 #### Badge
 
@@ -91,6 +95,8 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 <br />
 
 ### Examples
+
+The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
 
 #### Badge with icon
 
@@ -120,11 +126,15 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ## Advanced
 
+We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
+
 ### Customizing the Badge
 
 For customizing the Badge, you have to map styled view to Badge. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 #### Usage
+
+Default styling of the component can be found in the `components/core/badge` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Badge/index.tsx) of the styled `Badge` component.
 
 ```jsx
 // import the styles
@@ -143,5 +153,3 @@ export default () => (
   </Badge>
 );
 ```
-
-Default styling of the component can be found in the `components/core/badge` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Badge/index.tsx) of the styled `Badge` component.
