--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -22,6 +22,8 @@ import Wrapper from '../../Wrapper';
 
 ## Basic
 
+Following is the default implementation of the **Spinner** component without any additional customization. This serves as a starting point for users who are new to this library and want to learn about the basic functionality and appearance of the component.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
@@ -45,7 +47,7 @@ import Wrapper from '../../Wrapper';
 
 ## Installation
 
-This command copies the `Spinner` component to your project.
+To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
 npx gluestack-ui add spinner
@@ -53,8 +55,9 @@ npx gluestack-ui add spinner
 
 ### Import
 
+To use the component in your project, run the command below into your import statement. This will import the component from your components folder.
+
 ```bash
-// import the component from your components folder
 import { Spinner } from './components';
 ```
 
@@ -62,13 +65,15 @@ import { Spinner } from './components';
 
 ### Anatomy
 
-The Spinner component consists of the following parts:
+The structure provided below can help you identify and understand a Spinner component's various parts.
 
 ```jsx
 export default () => <Spinner />;
 ```
 
 ### API Reference
+
+The following section contains a comprehensive list of the component's references, including descriptions, properties, types, and default behavior. This information is readily available for you to access, helping you effectively utilize the component library in your projects.
 
 #### Spinner
 
@@ -80,11 +85,15 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
 
 ## Advanced
 
+We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
+
 ### Customizing the Spinner
 
 We have a function called `createSpinner` which can be used to create a custom `Spinner` component. This function takes in a configuration object which contains the styled components that you want to use for the spinner. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 #### Usage
+
+Default styling of all these components can be found in the `components/core/spinner` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Spinner/index.tsx) of the styled `Spinner` components.
 
 ```jsx
 // import the styles
@@ -101,5 +110,3 @@ const Spinner = createSpinner({
 // Using the spinner component
 export default () => <Spinner />;
 ```
-
-Default styling of all these components can be found in the `components/core/spinner` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Spinner/index.tsx) of the styled `Spinner` components.
