--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -23,6 +23,8 @@ import Wrapper from '../../Wrapper';
 
 ## Basic
 
+Following is the default implementation of the **Box** component without any additional customization. This serves as a starting point for users who are new to this library and want to learn about the basic functionality and appearance of the component.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
@@ -58,7 +60,7 @@ import Wrapper from '../../Wrapper';
 
 ## Installation
 
-This command copies the `Box` component to your project.
+To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
 npx gluestack-ui add box
@@ -66,8 +68,9 @@ npx gluestack-ui add box
 
 ### Import
 
+To use the component in your project, run the command below into your import statement. This will import the component from your components folder.
+
 ```bash
-// import the component from your components folder
 import { Box } from './components';
 ```
 
@@ -75,7 +78,7 @@ import { Box } from './components';
 
 ### Anatomy
 
-The box component consists of the following parts:
+The structure provided below can help you identify and understand a Box component's various parts.
 
 ```jsx
 export default () => (
@@ -87,6 +90,8 @@ export default () => (
 
 ### API Reference
 
+The following section contains a comprehensive list of the component's references, including descriptions, properties, types, and default behavior. This information is readily available for you to access, helping you effectively utilize the component library in your projects.
+
 #### Box
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
@@ -95,6 +100,8 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 <br />
 
 ### Examples
+
+The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
 
 #### Box with ref
 
@@ -133,11 +140,15 @@ return (
 
 ## Advanced
 
+We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
+
 ### Customizing the Box
 
 For customizing the Box, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 #### Usage
+
+Default styling of the component can be found in the `components/box` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Box/index.tsx) of the styled `Box` component.
 
 ```jsx
 // import the styles
@@ -153,5 +164,3 @@ export default () => (
   </Box>
 );
 ```
-
-Default styling of the component can be found in the `components/box` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Box/index.tsx) of the styled `Box` component.
