--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -30,7 +30,7 @@ import Wrapper from '../../Wrapper';
 
 ## Installation
 
-This command copies the `Fab` component to your project.
+To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```jsx
 npx gluestack-ui add fab
@@ -38,14 +38,17 @@ npx gluestack-ui add fab
 
 ### Import
 
+To use the component in your project, run the command below into your import statement. This will import the component from your components folder.
+
 ```jsx
-// import the component from your components folder
 import { Fab } from './components';
 ```
 
 <br />
 
 ## Basic
+
+Following is the default implementation of the **Fab** component without any additional customization. This serves as a starting point for users who are new to this library and want to learn about the basic functionality and appearance of the component.
 
 <AppProvider>
   <CodePreview
@@ -75,7 +78,7 @@ import { Fab } from './components';
 
 ### Anatomy
 
-The fab component consists of the following parts:
+The structure provided below can help you identify and understand a Fab component's various parts.
 
 ```jsx
 export default () => (
@@ -86,6 +89,8 @@ export default () => (
 ```
 
 ### API Reference
+
+The following section contains a comprehensive list of the component's references, including descriptions, properties, types, and default behavior. This information is readily available for you to access, helping you effectively utilize the component library in your projects.
 
 #### Fab
 
@@ -212,6 +217,8 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ### Accessibility
 
+We have outlined the various features that ensure the Fab component is accessible to all users, including those with disabilities. These features help ensure that your application is inclusive and meets accessibility standards.
+
 #### Keyboard
 
 - Tab: Moves focus to the next focusable element.
@@ -224,6 +231,8 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ### Dependencies
 
+The following are the lists of all the libraries and packages the component relies on. This information will help you ensure that your project has all the necessary dependencies installed to use the component.
+
 - `@gluestack-ui/utils`
 - `@react-native-aria/focus`
 - `react-native-svg`
@@ -233,7 +242,11 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ### Example
 
+The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
+
 #### Fab With Icon
+
+Icons can be used inside Fab component.
 
 <AppProvider>
   <CodePreview
@@ -264,11 +277,15 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ## Advanced
 
+We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
+
 ### Customizing the Fab
 
 We have a function called `createFab` which can be used to create a custom fab component. This function takes in a configuration object which contains the styled components that you want to use for the fab. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 #### Usage
+
+Default styling of all these components can be found in the `components/core/fab` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Fab/index.tsx) of the styled `Fab` components.
 
 ```jsx
 // import the styles
@@ -290,5 +307,3 @@ export default () => (
   </Fab>
 );
 ```
-
-Default styling of all these components can be found in the `components/core/fab` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Fab/index.tsx) of the styled `Fab` components.
