--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -23,6 +23,8 @@ import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 ## Basic
 
+Following is the default implementation of the **Text** component without any additional customization. This serves as a starting point for users who are new to this library and want to learn about the basic functionality and appearance of the component.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
@@ -48,7 +50,7 @@ import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 ## Installation
 
-This command copies the `Text` component to your project.
+To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
 npx gluestack-ui add text
@@ -56,8 +58,9 @@ npx gluestack-ui add text
 
 ### Import
 
+To use the component in your project, run the command below into your import statement. This will import the component from your components folder.
+
 ```bash
-// import the component from your components folder
 import { Text } from './components';
 ```
 
@@ -65,11 +68,15 @@ import { Text } from './components';
 
 ### Anatomy
 
+The structure provided below can help you identify and understand a Text component's various parts.
+
 ```jsx
 export default () => <Text></Text>;
 ```
 
 ### API Reference
+
+The following section contains a comprehensive list of the component's references, including descriptions, properties, types, and default behavior. This information is readily available for you to access, helping you effectively utilize the component library in your projects.
 
 #### Text
 
@@ -80,7 +87,11 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ### Examples
 
+The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
+
 #### Text Sizes
+
+Text component comes in different sizes, such as `xs`, `sm`, `md`, `lg`, `xl`, `2xl`, `3xl`, `4xl`, `5xl`, and `6xl` allowing users to adjust the button size based on their design needs.
 
 <AppProvider>
   <CodePreview
@@ -120,11 +131,15 @@ function App() {
 
 ## Advanced
 
+We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
+
 ### Customizing the Text
 
 For customizing the Text, you have to map styled view to Text. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 #### Usage
+
+Default styling of the component can be found in the `components/core/text` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Text/index.tsx) of the styled `Text` component.
 
 ```jsx
 // import the styles
@@ -136,5 +151,3 @@ const Text = Root;
 // Using the text component
 export default () => <Text />;
 ```
-
-Default styling of the component can be found in the `components/core/text` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Text/index.tsx) of the styled `Text` component.
